--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
             <a>ORDER</a>
             <a>MENU</a>
             <a>CONTACT</a>
-            <a></a>
+            <a>LOGIN</a>
         </div>
         </nav>
     </header>
