--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AIML Department</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -16,20 +16,19 @@
                 <a href="index.html">Home</a>
                 <a href="studentInfo.html">Student Info</a>
                 <a href="#">Faculties Info</a>
-                <a href="#">Memories</a>
                 <a href="#">Grup Chat</a>
                 <a href="#">Contact</a>
             </div>
         </nav>
 
         <div class="clgLogo">
-            <img src="../src/clgLogo.png" alt="clgLogo">
+            <img src="./src/clgLogo.png" alt="clgLogo">
         </div>
 
         <div class="branchName">AIML Department 2022-2026</div>
 
         <div class="grupPhoto">
-            <img src="../src/grupPhoto.jpg" alt="Group Photo" width="1500px">
+            <img src="./src/grupPhoto.jpg" alt="Group Photo" width="1500px">
         </div>
     </header>
 
@@ -38,6 +37,6 @@
     </footer>
 
     <!-- ✅ Correct way to include JavaScript -->
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
