--- a/studentInfo.html
+++ b/studentInfo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Info</title>
-    <link rel="stylesheet" href="../css/studentInfo.css">
+    <link rel="stylesheet" href="./css/studentInfo.css">
 </head>
 <body>
     <nav>
@@ -21,23 +21,23 @@
     </nav>
     <div class="studentCard1">
         <div class="studentCard">
-           <a href=""> <img src="../src/1.png" width="155px" alt="1"></a>
+           <a href=""> <img src="./src/1.png" width="155px" alt="1"></a>
             <p>Student 1</p>
         </div>
         <div class="studentCard">
-            <a href=""> <img src="../src/2.png" alt="2"></a>
+            <a href=""> <img src="./src/2.png" alt="2"></a>
             <p>Student 2</p>
         </div>
         <div class="studentCard">
-            <a href=""> <img src="../src/3.png" alt="3"></a>
+            <a href=""> <img src="./src/3.png" alt="3"></a>
             <p>Student 3</p>
         </div>
         <div class="studentCard">
-            <a href=""> <img src="../src/4.png" alt="4"></a>
+            <a href=""> <img src="./src/4.png" alt="4"></a>
             <p>Student 4</p>
         </div>
         <div class="studentCard">
-            <a href=""> <img src="../src/5.png" alt="5"></a>
+            <a href=""> <img src="./src/5.png" alt="5"></a>
             <p>Student 5</p>
         </div>
     </div>
@@ -46,28 +46,28 @@
         <div class="studentCard2">
             <div class="studentCard1">
                 <div class="studentCard">
-                    <a href=""> <img src="../src/6.png" width="155px" alt="6"></a>
+                    <a href=""> <img src="./src/6.png" width="155px" alt="6"></a>
                     <p>Student 1</p>
                 </div>
                 <div class="studentCard">
-                    <a href=""> <img src="../src/7.png" alt="7"></a>
+                    <a href=""> <img src="./src/7.png" alt="7"></a>
                     <p>Student 2</p>
                 </div>
                 <div class="studentCard">
-                    <a href=""> <img src="../src/8.png" alt="8"></a>
+                    <a href=""> <img src="./src/8.png" alt="8"></a>
                     <p>Student 3</p>
                 </div>
                 <div class="studentCard">
-                    <a href=""> <img src="../src/9.png" alt="9"></a>
+                    <a href=""> <img src="./src/9.png" alt="9"></a>
                     <p>Student 4</p>
                 </div>
                 <div class="studentCard">
-                    <a href=""> <img src="../src/10.png" alt="10"></a>
+                    <a href=""> <img src="./src/10.png" alt="10"></a>
                     <p>Student 5</p>
                 </div>
             </div>
             
     </div>
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
