--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <a href="index.html">Home</a>
                 <a href="studentInfo.html">Student Info</a>
                 <a href="#">Faculties Info</a>
+                <a href="#">Memories</a>
                 <a href="#">Grup Chat</a>
                 <a href="#">Contact</a>
             </div>
